--- a/src/app/admin/employee/list/list.component.html
+++ b/src/app/admin/employee/list/list.component.html
@@ -4,5 +4,5 @@
     </div>
   <app-tabledata [list]="employeeList" [titles]="tableheader" (eventAction)="action($event)" ></app-tabledata>
   <div class="flex justify-center ml-3 mt-3 mb-3 mr-3">
-    <button mat-raised-button color="primary" (click)="loadMore()">Load more</button>
+    <button mat-raised-button color="primary" (click)="loadMore()" *ngIf="employeeList.length && count > employeeList.length">Load more</button>
     </div>
