--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+<app-content-navbar></app-content-navbar>
+<mat-card class="no-card">
+    Not yet implemented
+    </mat-card>
