--- a/src/app/admin/departments/add/add.component.html
+++ b/src/app/admin/departments/add/add.component.html
@@ -1,1 +1,46 @@
-<p>add works!</p>
+<div class="flex-auto">
+    <div class="flex flex-col">
+      <div class="flex flex-col bg-white-500">
+        <div class="flex flex-row">
+          <app-content-navbar></app-content-navbar>
+          <h3 class="font-bold text-gray-500 p-2">Add department</h3>
+        </div>
+        <!--p tag -->
+      </div>
+  
+      <!-- card design -->
+      <div class="min-h-screen bg-gray-100">
+        <mat-card class="p-6 bg-white px-2 mx-3 my-3 ">
+          <div class="p-2 clear-both">
+          <form [formGroup]="department" *ngIf="showForm">
+              <div class="flex ">
+                <div class="w-full">
+                  <div class="grid lg:grid-cols-1 gap-4">
+                    <mat-form-field class="example-full-width">
+                      <mat-label>Department name</mat-label>
+                      <input matInput placeholder="Please enter name of the department" name="departmentName"
+                        formControlName="departmentName" >
+                    </mat-form-field>
+                    
+                    <mat-form-field class="example-full-width">
+                      <mat-label>Head of the department</mat-label>
+                      <input matInput placeholder="Please enter head of the department" name="departmentHead"
+                        formControlName="departmentHead" (click)="setValue()" readonly>
+                    </mat-form-field>
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Location</mat-label>
+                        <input matInput placeholder="Please enter lcoation of the department" name="departmentHead"
+                          formControlName="location">
+                      </mat-form-field>
+                  </div>
+                </div>
+              </div>
+            <div class="align">
+              <button mat-raised-button color="primary" *ngIf="!isReadOnly" [disabled]="!department.valid" (click)="submit()">Submit</button>
+              <button mat-raised-button color="primary" *ngIf="isReadOnly"  (click)="enableForm()">Edit</button>
+            </div>
+          </form>
+          </div>
+        </mat-card>
+      </div>
+  
