--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -16,7 +16,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.fullName | titlecase}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.firstName | titlecase}}  {{element.middleName | titlecase}} {{element.lastName | titlecase}} </td>
     </ng-container>
   
     <!-- Weight Column -->
