--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,16 @@ body {
 .search-box{
   margin: 0px 10px;
 }
+.content-banner{
+  img{
+    width: 100%;
+    height: 10rem;
+  }
+  .banner-text{
+    position: absolute;
+    color: #fff;
+    padding: 4rem 4rem;
+    font-size: 3rem;
+    text-shadow: 5px 3px #2a2929;
+  }
+}
