--- a/src/app/admin/employee/list/list.component.html
+++ b/src/app/admin/employee/list/list.component.html
@@ -1,10 +1,19 @@
-  <div class="flex justify-space-between ml-3 mt-3 mb-3 mr-3">
-    <mat-form-field class="example-full-width w-full search-box" >
+  <div class="flex justify-end ml-3 mt-3 mb-3 mr-3">
+    <mat-form-field class="example-full-width w-1/4 search-box" >
       <span matPrefix> </span>
-      <input type="text" matInput placeholder="Search here" name= "search" [(ngModel)]= "searchText">
-      <button matSuffix mat-button><mat-icon (click)="search()">search</mat-icon></button>
+      <input type="text" matInput placeholder="Search here" name= "search" [(ngModel)]= "searchText" (click)="search()">
+      <!-- <button matSuffix mat-button><mat-icon (click)="search()">search</mat-icon></button> -->
+      <button matSuffix mat-button><mat-icon (click)="openPopup()" >filter_alt</mat-icon></button>
+
       </mat-form-field>
-    <div class="margin-auto">
+
+      <!-- <div class="mx-2">
+        <button mat-raised-button color="primary" (click)="openPopup()">
+          <mat-icon>filter_alt</mat-icon>
+        </button>
+      </div> -->
+
+    <div class="mx-2">
       <button mat-raised-button color="primary" (click)="add()">+ Create employee</button>
       </div>
     </div>
